# NumSim

./: CMakeCache.txt  CMakeLists.txt  README.md  SConstruct  brunnen.geom  brunnen.param  debugtest.geom  debugtest.param  default.geom  default.param  ex1.geom  ex1.param  ex2.geom  ex2.param  example1.geom  example1.param  example2.geom  example2.param  example3.geom  example3.param  example4.geom  example4.param  exercise1.geom  exercise1.param  exercise1_small.geom  exercise2.geom  exercise2.param  exercise3.geom  exercise3_a.param  exercise3_b.param  exercise4.param  exercise4_a.geom  exercise4_b.geom  exercise4_b_harmed.geom  exercise5.geom  exercise5.param  geometry.cpp  glas_small.geom  glas_small.param  spirale.geom  (+3 more)
erg_vtk/glas_dt_0/: field_1.vts  field_10.vts  field_11.vts  field_12.vts  field_13.vts  field_14.vts  field_15.vts  field_16.vts  field_17.vts  field_18.vts  field_19.vts  field_2.vts  field_20.vts  field_21.vts  field_22.vts  field_23.vts  field_24.vts  field_25.vts  field_3.vts  field_4.vts  field_5.vts  field_6.vts  field_7.vts  field_8.vts  field_9.vts
erg_vtk/glas_dt_1e-5/: field_100.vts  field_101.vts  field_102.vts  field_103.vts  field_104.vts  field_105.vts  field_106.vts  field_107.vts  field_108.vts  field_109.vts  field_11.vts  field_110.vts  field_111.vts  field_112.vts  field_113.vts  field_114.vts  field_115.vts  field_116.vts  field_117.vts  field_118.vts  field_119.vts  field_120.vts  field_121.vts  field_122.vts  field_123.vts  field_124.vts  field_125.vts  field_126.vts  field_127.vts  field_128.vts  field_129.vts  field_130.vts  field_131.vts  field_132.vts  field_133.vts  field_134.vts  field_135.vts  field_136.vts  field_137.vts  field_138.vts  (+802 more)
erg_vtk/glas_dt_6e-5_bad/: field_0.vts  field_10.vts  field_100.vts  field_101.vts  field_102.vts  field_103.vts  field_104.vts  field_105.vts  field_106.vts  field_107.vts  field_108.vts  field_109.vts  field_11.vts  field_110.vts  field_111.vts  field_112.vts  field_113.vts  field_114.vts  field_115.vts  field_116.vts  field_117.vts  field_118.vts  field_119.vts  field_12.vts  field_120.vts  field_121.vts  field_122.vts  field_123.vts  field_124.vts  field_125.vts  field_126.vts  field_127.vts  field_128.vts  field_129.vts  field_13.vts  field_130.vts  field_131.vts  field_132.vts  field_133.vts  field_134.vts  (+124 more)
erg_vtk/spirale_1/: field_0.vts  field_1.vts  field_10.vts  field_11.vts  field_12.vts  field_13.vts  field_14.vts  field_15.vts  field_16.vts  field_17.vts  field_18.vts  field_19.vts  field_2.vts  field_20.vts  field_21.vts  field_22.vts  field_23.vts  field_24.vts  field_25.vts  field_26.vts  field_27.vts  field_28.vts  field_29.vts  field_3.vts  field_30.vts  field_31.vts  field_32.vts  field_33.vts  field_34.vts  field_35.vts  field_36.vts  field_37.vts  field_38.vts  field_39.vts  field_4.vts  field_40.vts  field_5.vts  field_6.vts  field_7.vts  field_8.vts  (+1 more)
erg_vtk/spritzguss_t5/: field_0.vts  field_1.vts  field_10.vts  field_11.vts  field_12.vts  field_13.vts  field_14.vts  field_15.vts  field_16.vts  field_17.vts  field_18.vts  field_19.vts  field_2.vts  field_20.vts  field_21.vts  field_22.vts  field_23.vts  field_24.vts  field_25.vts  field_26.vts  field_27.vts  field_28.vts  field_29.vts  field_3.vts  field_30.vts  field_31.vts  field_32.vts  field_33.vts  field_34.vts  field_35.vts  field_36.vts  field_37.vts  field_38.vts  field_39.vts  field_4.vts  field_40.vts  field_41.vts  field_42.vts  field_43.vts  field_5.vts  (+4 more)
src/: communicator.cpp  communicator.hpp  compute.cpp  compute.hpp  geometry.cpp  geometry.hpp  grid.cpp  grid.hpp  iterator.cpp  iterator.hpp  main.cpp  parameter.cpp  parameter.hpp  solver.cpp  solver.hpp  testmain.cpp  typedef.hpp  visu.hpp  vtk.hpp  zeitgeist.hpp
